MiniBrowser: a tab closed from javascript always closes the window https://bugs.webkit.org/show_bug.cgi?id=169415

Reviewed by Michael Catanzaro.

When I implemented tabs support in MiniBrowser I forgot about web view close. We connect to the signal (only for
the active tab) and close the window. That worked when we didn't have tabs, but now we should close the tab, or
the window if it's the last tab.

* MiniBrowser/gtk/BrowserWindow.c:
(webViewClose): Destroy the window if therte's only one tab, otherwise search for the tab corresponding to the web
view and destroy it.
(browserWindowSwitchTab): Re-connect to close signal, we want to handle close on all tabs.

Canonical link: https://commits.webkit.org/186536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213789 268f45cc-cd09-0410-ab3c-d52691b4dbfc